# LoseRAR_Project

./: .gitignore  CMakeLists.txt  main.cpp
src/archive/: Directory.cpp  Directory.h  Packer.cpp  Packer.h
src/core/: Common.h  Decoder.cpp  Decoder.h  FrequencyMap.cpp  FrequencyMap.h  Huffman.cpp  Huffman.h  HuffmanNode.h  HuffmanTree.cpp  HuffmanTree.h  main.cpp
src/io/: BitWriter.cpp  BitWriter.h  FileReader.cpp  FileReader.h  HeaderManager.cpp  HeaderManager.h
